metadata and hero text on mobile fix

--- a/css/typewriter.css
+++ b/css/typewriter.css
@@ -1,7 +1,9 @@
+/* ====== DESKTOP ======== */
 .lg-css-typing p {
   border: 0;
   border-right: 0.15em solid orange;
   font-family: "Courier";
+  font-size: 2.5rem;
   white-space: nowrap;
   overflow: hidden;
   letter-spacing: 0.6rem;
@@ -9,7 +11,7 @@
 }
 
 .lg-css-typing p:nth-child(1) {
-  width: 100%;
+  width: 80%;
   opacity: 0;
   -webkit-animation: type-lg 4s steps(80, end);
   animation: type-lg 4s steps(80, end);
@@ -65,18 +67,19 @@
 
 /*======= MOBILE =======*/
 .css-typing p {
+  font-size: 2.5rem;
   border: 0;
   border-right: 0.15em solid orange;
   font-family: "Courier";
   white-space: nowrap;
   overflow: hidden;
   letter-spacing: 0.6rem;
-  line-height: 4rem;
+  line-height: 3rem;
   font-weight: 700;
 }
 
 .css-typing p:nth-child(1) {
-  width: 6em;
+  width: 7em;
   opacity: 0;
   -webkit-animation: type 2s steps(40, end);
   animation: type 2s steps(40, end);
@@ -87,7 +90,7 @@
 }
 
 .css-typing p:nth-child(2) {
-  width: 5em;
+  width: 6em;
   opacity: 0;
   -webkit-animation: type2 2s steps(40, end);
   animation: type2 2s steps(40, end);
@@ -98,7 +101,7 @@
 }
 
 .css-typing p:nth-child(3) {
-  width: 6em;
+  width: 7em;
   opacity: 0;
   -webkit-animation: type3 2s steps(40, end);
   animation: type3 2s steps(40, end), blink 0.5s step-end infinite alternate;
